force-app/main/default/objects/dw_ecard_app_serial_number_log__x/dw_ecard_app_serial_number_log__x.object-meta.xml
<CustomObject>
    <description>dw_ecard_app$serial_number_log</description>
    <externalDataSource>Heroku</externalDataSource>
    <externalName>dw_ecard_app$serial_number_log</externalName>
    <label>dw_ecard_app$serial_number_log</label>
    <pluralLabel>dw_ecard_app$serial_number_log</pluralLabel>
</CustomObject>