force-app/main/default/objects/dw_ecard_app_serial_number_log__x/fields/brand__c.field-meta.xml
<CustomField>
    <fullName>brand__c</fullName>
    <description>brand</description>
    <externalDeveloperName>brand</externalDeveloperName>
    <label>brand</label>
    <length>100</length>
    <type>Text</type>
</CustomField>