force-app/main/default/objects/dw_ecard_app_serial_number_log__x/fields/dat_serial_number_type__c.field-meta.xml
<CustomField>
    <fullName>dat_serial_number_type__c</fullName>
    <description>dat_serial_number_type</description>
    <externalDeveloperName>dat_serial_number_type</externalDeveloperName>
    <label>dat_serial_number_type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>