force-app/main/default/objects/dw_ecard_app_serial_number_log__x/fields/manufacture__c.field-meta.xml
<CustomField>
    <fullName>manufacture__c</fullName>
    <description>manufacture</description>
    <externalDeveloperName>manufacture</externalDeveloperName>
    <label>manufacture</label>
    <length>100</length>
    <type>Text</type>
</CustomField>