force-app/main/default/objects/dw_ecard_app_serial_number_log__x/fields/serial_no__c.field-meta.xml
<CustomField>
    <fullName>serial_no__c</fullName>
    <description>serial_no</description>
    <externalDeveloperName>serial_no</externalDeveloperName>
    <label>serial_no</label>
    <length>50</length>
    <type>Text</type>
</CustomField>