force-app/main/default/objects/dw_ecard_app_serial_number_log__x/fields/serial_number_log_id__c.field-meta.xml
<CustomField>
    <fullName>serial_number_log_id__c</fullName>
    <description>serial_number_log_id</description>
    <externalDeveloperName>serial_number_log_id</externalDeveloperName>
    <label>serial_number_log_id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>