force-app/main/default/objects/dw_ecard_app_serial_number_log__x/fields/tyre_psi__c.field-meta.xml
<CustomField>
    <fullName>tyre_psi__c</fullName>
    <description>tyre_psi</description>
    <externalDeveloperName>tyre_psi</externalDeveloperName>
    <label>tyre_psi</label>
    <length>50</length>
    <type>Text</type>
</CustomField>