force-app/main/default/objects/dw_ecard_app_serial_number_log__x/fields/tyre_size_ply__c.field-meta.xml
<CustomField>
    <fullName>tyre_size_ply__c</fullName>
    <description>tyre_size_ply</description>
    <externalDeveloperName>tyre_size_ply</externalDeveloperName>
    <label>tyre_size_ply</label>
    <length>50</length>
    <type>Text</type>
</CustomField>