force-app/main/default/objects/dw_ecard_app_serial_number_log__x/fields/updatedby_id__c.field-meta.xml
<CustomField>
    <fullName>updatedby_id__c</fullName>
    <description>updatedby_id</description>
    <externalDeveloperName>updatedby_id</externalDeveloperName>
    <label>updatedby_id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>